test/libsolidity/syntaxTests/nameAndTypeResolution/299_invalid_fixed_types_long_invalid_identifier.sol
contract test {
    fixed99999999999999999999999999999999999999x7 b = 9.5;
}
// ----
// DeclarationError 7920: (20-65): Identifier not found or not unique.
